# TeXslate

./: .gitignore  PROJECT.md  README.de.md  README.md  build-native.sh  keystore.properties.example  settings.gradle.kts
.github/ISSUE_TEMPLATE/: bug_report.yml  tester_feedback.yml
app/: build.gradle.kts
app/src/androidTest/java/de/bgg_home/texdroid/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/templates/: academic_thesis.tex  beamer_presentation.tex  exam_worksheet.tex  letter_scrlttr2.tex
app/src/main/assets/textmate/: languages.json
app/src/main/assets/textmate/latex/: TeX.tmLanguage.json
app/src/main/java/de/bgg_home/texdroid/: MainActivity.kt  RustBridge.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  file_paths.xml  locales_config.xml
docs/fdroid/: SUBMISSION.md  de.bgg_home.texslate.yml
fastlane/metadata/android/de-DE/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/de-DE/changelogs/: 10.txt  5.txt  6.txt  7.txt  8.txt  9.txt
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt  title.txt
fastlane/metadata/android/en-US/changelogs/: 10.txt  5.txt  6.txt  7.txt  8.txt  9.txt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml
rust/src/: lib.rs
(+37 files in other folders)
